packages/ui/src/components/Typography/Label.css
:where(.cui-label) {
	--cui-text--inset-horizontal: var(--cui-label--inset-horizontal);
	--cui-text--inset-vertical: var(--cui-label--inset-vertical);
	--cui-text--padding-horizontal: var(--cui-label--inset-horizontal);
	--cui-text--padding-vertical: var(--cui-label--inset-vertical);
	--cui-label--inset-vertical: var(--cui-gap);
	--cui-label--inset-horizontal: var(--cui-gap);
	background-color: transparent;
	border: none;
	border-radius: var(--cui-gap);
	color: inherit;
	display: inline-flex;
	gap: var(--cui-gap);
	font-family: inherit;
	font-size: var(--cui-font-size--label);
	font-weight: inherit;
	line-height: 1.125em;
	position: relative;
	text-align: inherit;
	text-decoration: none;
	text-transform: inherit;
}

:where(.cui-label.view-bold) {
	font-weight: bolder;
}

:where(.cui-label.view-small) {
	font-size: var(--cui-font-size--note);
}

:where(.cui-label.view-large) {
	font-weight: lighter;
	font-size: var(--cui-font-size--heading);
}

